# bogdanoff

./: .gitignore  README.md  requirements.txt
infrastructure/: docker-compose.yml  pyproject.toml
infrastructure/binance_crawler/: Dockerfile
infrastructure/binance_crawler/src/: binance.py  key_fetcher.py
infrastructure/binance_downloader/: Dockerfile
src/collectors/: binance.py  binance_daily.py  binance_downloader.py
