[tool.poetry]
name = "binance_crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
shutup = "^0.2.0"
peewee = "^3.14.10"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pyright = "^1.1.245"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
